feat: Introduce desktop client with file management and photo editing, add mobile app build configuration, and implement test automation and release workflow.

--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -8,21 +8,38 @@
     "build": "electron-builder",
     "build:win": "electron-builder --win",
     "build:mac": "electron-builder --mac",
-    "build:linux": "electron-builder --linux"
+    "build:linux": "electron-builder --linux",
+    "dist": "electron-builder -w"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
+  "build": {
+    "appId": "com.xstore.desktop",
+    "productName": "XStore Desktop",
+    "directories": {
+      "output": "dist"
+    },
+    "win": {
+      "target": [
+        "nsis"
+      ]
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "runAfterFinish": true
+    }
+  },
   "dependencies": {
     "axios": "^1.13.2",
     "busboy": "^1.6.0",
     "canvas": "^3.2.0",
     "crypto-js": "^4.2.0",
-    "electron": "^39.2.6",
-    "electron-builder": "^26.0.12",
     "jsqr": "^1.4.0",
     "qrcode": "^1.5.4",
     "ws": "^8.18.3"
+  },
+  "devDependencies": {
+    "electron": "^39.2.6",
+    "electron-builder": "^26.0.12"
   }
 }
