--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -1,6 +1,8 @@
 {
   "name": "mobile-app",
-  "version": "1.0.0",
+  "version": "1.1.0",
+  "description": "Secure P2P file sharing mobile app for XStore.",
+  "author": "inzamrzn918",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
