--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -17,7 +17,6 @@
     "axios": "^1.13.2",
     "crypto-js": "^4.2.0",
     "expo": "~54.0.29",
-    "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~17.0.10",
     "expo-document-picker": "^14.0.8",
     "expo-file-system": "~19.0.21",
