--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,66 +41,18 @@ jobs:
           name: windows-exe
           path: desktop-client/dist/*.exe
 
-  release-mobile:
-    name: Build Expo APK
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'npm'
-          cache-dependency-path: mobile-app/package-lock.json
-
-      - name: Set up Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Install dependencies
-        working-directory: ./mobile-app
-        run: npm install
-
-      - name: Set up Expo
-        uses: expo/expo-github-action@v8
-        with:
-          expo-version: latest
-          eas-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
-
-      - name: Prebuild Android
-        working-directory: ./mobile-app
-        run: npx expo prebuild --platform android --no-interactive
-
-      - name: Build APK with Gradle
-        working-directory: ./mobile-app/android
-        run: ./gradlew assembleRelease
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-apk
-          path: mobile-app/android/app/build/outputs/apk/release/app-release.apk
-
   publish:
     name: Create GitHub Release
-    needs: [release-desktop, release-mobile]
+    needs: [release-desktop]
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code (to access APK)
+        uses: actions/checkout@v4
+
       - name: Download Windows EXE
         uses: actions/download-artifact@v4
         with:
           name: windows-exe
-          path: .
-
-      - name: Download Android APK
-        uses: actions/download-artifact@v4
-        with:
-          name: android-apk
           path: .
 
       - name: Create Release
@@ -108,6 +60,6 @@ jobs:
         with:
           files: |
             *.exe
-            app-release.apk
+            release-bin/app-release.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
