--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "desktop-client",
-  "version": "1.1.0",
+  "name": "XStore-Desktop",
+  "version": "1.2.0",
   "description": "Secure P2P file sharing desktop client for XStore.",
   "author": "inzamrzn918",
   "repository": {
@@ -46,7 +46,10 @@
     "busboy": "^1.6.0",
     "canvas": "^3.2.0",
     "crypto-js": "^4.2.0",
+    "electron-log": "^5.4.3",
+    "electron-updater": "^6.6.2",
     "jsqr": "^1.4.0",
+    "ngrok": "^4.3.3",
     "qrcode": "^1.5.4",
     "ws": "^8.18.3"
   },
