--- a/desktop-client/package.json
+++ b/desktop-client/package.json
@@ -49,6 +49,7 @@
     "canvas": "^3.2.0",
     "cloudflared": "^0.7.1",
     "crypto-js": "^4.2.0",
+    "dotenv": "^17.2.3",
     "electron-log": "^5.4.3",
     "electron-updater": "^6.6.2",
     "jsqr": "^1.4.0",
